# Ethical-turnover-analysis

./: README.md  RECAP_COURS_IA.md  generate_notebook.py  main.ipynb  pa.py  pyproject.toml  Énoncé.txt
src/: main.ipynb
workshops/WS_Classification/: COURS_Classification.md  WS_Classification.ipynb  Énoncé.mhtml  Énoncé.txt
workshops/WS_Regression/: COURS_Regression.md  Énoncé.mhtml  Énoncé.txt
workshops/WS_UtilisationIA/: COURS_EDA.md  Énoncé.mhtml  Énoncé.txt
